--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,9 @@
         <li> <a href="about.html">About us</a> </li>
     </ul>
 </nav>
+<!-- Navbar End -->
 
-
+<div class="m"> <h1>CONTACT: Work in progress....</h1> </div>
 
 </body>
 </html>
