--- a/index.html
+++ b/index.html
@@ -13,15 +13,23 @@
 <div class="logo"> <a href="index.html"><img src="my logo.png" alt="logo" height="40"> </a> </div>
 <nav>
     <ul>
-        <li> <a href="index.html">Home</a> </li>
+        <li> <a class="active" href="index.html" class="active"> Home</a> </li>
         <li> <a href="menu.html">Menu</a> </li>
         <li> <a href="deal.html">Deal</a> </li>
         <li> <a href="contact.html">Contact us</a> </li>
         <li> <a href="about.html">About us</a> </li>
+        <div class="search">Thiz is search</div>
     </ul>
 </nav>
+<!-- Navbar End -->
 
-<h1></h1>
+<div class="overlay">
+    <div class="welcome">
+        <h1>WELCOME TO <br> <span>BABA</span> FOOD </h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, facilis, tempora veniam odit quaerat  perspiciatis<br> placeat quia, nam dolores repellendus voluptas numquam neque blanditiis? Inciduntexplicabobr ratione laboriosam<br> deserunt id quam iusto soluta amet.</p>
+        <a href="menu.html"> <button>Order Now</button> </a>
+    </div>
+</div>
 
 </body>
 </html>
