--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
     <title>BABA FOOD</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body> 
+<body background url="backm.jpg" important!> 
     
 <!-- Navbar Started -->
 <div class="logo"> <a href="index.html"><img src="my logo.png" alt="logo" height="40"> </a> </div>
@@ -20,8 +20,9 @@
         <li> <a href="about.html">About us</a> </li>
     </ul>
 </nav>
+<!-- Navbar End -->
 
-
+<div class="m"> <h1>MENU: Work in progress....</h1> </div>
 
 </body>
 </html>
